# open-warden

./: .editorconfig  .gitignore  .gitmodules  .oxfmtignore  .oxlintrc.json  .prettierignore  AGENTS.md  Cargo.toml  LICENSE  README.md  agent.md  package.json  pnpm-lock.yaml  turbo.json
.github/workflows/: desktop-release.yml  quality.yml
.vite-hooks/: pre-commit  pre-push
api-ref/: bitbucket-api.txt
apps/desktop/: .gitignore  .prettierignore  electron-builder.config.mjs  eslint.config.js  forge.config.cjs  index.html  package.json  playwright.config.ts  tsconfig.app.json  tsconfig.electron.json  tsconfig.vitest.json  vite.config.ts  vite.main.config.ts  vite.preload.config.ts  vite.renderer.config.ts  vite.shared.config.test.ts  vite.shared.config.ts  vitest.config.ts
apps/desktop/.storybook/: main.ts
apps/desktop/electron/: appSettings.test.ts  appSettings.ts  bitbucket-repo.ts  desktop-api.ts  dev-shell.test.ts  git.test.ts  git.ts  github-repo.ts  hostedRepos.test.ts  hostedRepos.ts  ipc-channels.ts  main.ts  mergeMacUpdateManifests.test.ts  preload-path.test.ts  preload-path.ts  preload.test.ts  preload.ts  providerConnections.ts  system.ts  updateManager.ts  updateState.test.ts  updateState.ts  workspaceSession.test.ts  workspaceSession.ts
apps/desktop/electron/hosted-repos/: git.ts  providers.ts  pullRequests.ts  repository.ts  workspace.ts
apps/desktop/electron/lsp/: pathLanguage.ts  protocol.ts  serverCatalog.ts  sessionManager.test.ts  sessionManager.ts
apps/desktop/scripts/: dev-electron.mjs
apps/desktop/src/: App.css  App.tsx  bindings.ts  index.css  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/app/: AppHeader.tsx  AppShell.tsx  AppThemeProvider.tsx  RepoTabs.tsx  (+9 more)
crates/core/: Cargo.toml  package.json
crates/core/src/: error.rs  state.rs  workspace.rs
crates/core/src/agent/: claude.rs  mod.rs
crates/core/src/diff/: mod.rs
crates/core/src/syntax/: mod.rs
crates/core/src/ui/: command_palette.rs  commit_dialog.rs  commit_panel.rs  mod.rs  workspace_panel.rs
crates/core/src/vcs/: backend.rs  git.rs  jj.rs  mod.rs  test_utils.rs
patches/: @pierre__diffs@1.1.0-beta.13.patch
scripts/: merge-mac-update-manifests.mjs
src/: app.rs  main.rs  state.rs
src/agent/: backend.rs  claude.rs  mod.rs  opencode.rs
src/diff/: mod.rs
src/git/: mod.rs
src/ui/: command_palette.rs  comment.rs  diff_panel.rs  file_tree.rs  mod.rs  toolbar.rs
src/vcs/: backend.rs  git.rs
(+227 files in other folders)
