[package]
name = "agent-leash"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.30"

# Git
gix = { version = "0.68", default-features = false, features = ["basic", "revision"] }

# Diff
similar = "2.6"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.23"
tree-sitter-highlight = "0.24"

# Async/utils
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync"] }
anyhow = "1.0"
