[package]
name = "agent-leash"
version = "0.1.0"
edition = "2021"

[features]
default = []
jj = ["jj-lib", "chrono", "pollster", "futures"]

[dependencies]
# GUI
eframe = { version = "0.30", default-features = false, features = ["default_fonts", "wgpu"] }
egui = "0.30"

# VCS
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }

# Jujutsu (optional)
jj-lib = { version = "0.37.0", features = ["git"], optional = true }
chrono = { version = "0.4", optional = true }
pollster = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }

# Diff
similar = "2.6"

# Syntax highlighting
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
tree-sitter-go = "0.23"
tree-sitter-json = "0.23"
tree-sitter-highlight = "0.24"

# Async/utils
tokio = { version = "1", features = ["process", "rt-multi-thread", "sync"] }
anyhow = "1.0"
thiserror = "1.0"

# Fuzzy search
fuzzy-matcher = "0.3"

# Workspace/config
serde = { version = "1", features = ["derive"] }
toml = "0.8"
dirs = "5"
rfd = "0.15"

[dev-dependencies]
tempfile = "3"
