[package]
name = "agent-leash"
version = "0.1.0"
edition = "2021"

[lib]
name = "agent_leash"
path = "src/lib.rs"

[features]
default = []
jj = ["jj-lib", "chrono", "pollster", "futures"]

[dependencies]
# VCS
git2 = { version = "0.20", default-features = false, features = ["vendored-libgit2", "vendored-openssl", "https"] }

# Jujutsu (optional)
jj-lib = { version = "0.37.0", features = ["git"], optional = true }
chrono = { version = "0.4", optional = true }
pollster = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }

thiserror = "1.0"

[dev-dependencies]
tempfile = "3"
